--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "voxa-dashbot",
-  "version": "0.1.7",
+  "version": "2.0.0-alpha",
   "description": "Integrate Dashbot analytics into your Alexa apps using the voxa framework",
   "main": "index.js",
   "scripts": {
@@ -27,7 +27,7 @@
   ],
   "author": "Rain Agency <npm@rain.agency> (http://rain.agency)",
   "engines": {
-    "node": ">=4.3"
+    "node": ">=8.10"
   },
   "license": "MIT",
   "dependencies": {
@@ -45,7 +45,10 @@
     "mocha-jenkins-reporter": "0.3.7",
     "nock": "^9.2.3",
     "simple-mock": "^0.7.3",
-    "voxa": "^2.2.1"
+    "voxa": "^3.0.0-alpha22"
+  },
+  "peerDependencies": {
+    "voxa": "^3.0.0-alpha22"
   },
   "bugs": {
     "url": "https://github.com/mediarain/voxa-dashbot/issues"
