Moving to typescript

--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "voxa-dashbot",
-  "version": "2.0.0-alpha",
+  "version": "2.0.0-alpha1",
   "description": "Integrate Dashbot analytics into your Alexa apps using the voxa framework",
-  "main": "index.js",
+  "main": "lib/Voxa-Dashbot.js",
   "scripts": {
     "test": "istanbul cover _mocha -- --recursive tests",
     "test-ci": "JUNIT_REPORT_PATH=junit.xml istanbul cover _mocha -- --recursive --colors --reporter mocha-jenkins-reporter tests",
@@ -31,24 +31,23 @@
   },
   "license": "MIT",
   "dependencies": {
+    "@types/lodash": "^4.14.116",
     "dashbot": "^9.8.0",
     "debug": "^2.6.9",
     "lodash": "^4.17.10"
   },
   "devDependencies": {
     "chai": "^3.5.0",
-    "eslint": "3.15.0",
-    "eslint-config-airbnb-base": "11.1.0",
-    "eslint-plugin-import": "2.2.0",
-    "istanbul": "^0.4.5",
     "mocha": "3.2.0",
     "mocha-jenkins-reporter": "0.3.7",
     "nock": "^9.2.3",
     "simple-mock": "^0.7.3",
-    "voxa": "^3.0.0-alpha22"
+    "tslint": "^5.11.0",
+    "typescript": "^3.1.1",
+    "voxa": "^3.0.0-alpha30"
   },
   "peerDependencies": {
-    "voxa": "^3.0.0-alpha22"
+    "voxa": "^3.0.0-alpha30"
   },
   "bugs": {
     "url": "https://github.com/mediarain/voxa-dashbot/issues"
