--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "voxa-dashbot",
-  "version": "2.0.0-alpha1",
+  "version": "2.0.0-alpha2",
   "description": "Integrate Dashbot analytics into your Alexa apps using the voxa framework",
   "main": "lib/Voxa-Dashbot.js",
   "scripts": {
@@ -47,10 +47,10 @@
     "ts-node": "^7.0.1",
     "tslint": "^5.11.0",
     "typescript": "^3.1.1",
-    "voxa": "^3.0.0-alpha30"
+    "voxa": "3.0.0-alpha38"
   },
   "peerDependencies": {
-    "voxa": "^3.0.0-alpha30"
+    "voxa": "3.0.0-alpha38"
   },
   "bugs": {
     "url": "https://github.com/mediarain/voxa-dashbot/issues"
