--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "voxa-dashbot",
-  "version": "2.0.0-alpha4",
+  "version": "2.0.0",
   "description": "Integrate Dashbot analytics into your Alexa apps using the voxa framework",
   "main": "lib/Voxa-Dashbot.js",
   "scripts": {
@@ -13,7 +13,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/mediarain/voxa-dashbot.git"
+    "url": "git+https://github.com/VoxaAI/voxa-dashbot.git"
   },
   "keywords": [
     "alexa",
@@ -32,30 +32,30 @@
   },
   "license": "MIT",
   "dependencies": {
-    "@types/lodash": "^4.14.121",
-    "dashbot": "^10.2.4",
-    "lodash": "^4.17.10"
+    "@types/lodash": "^4.14.126",
+    "dashbot": "^10.4.0",
+    "lodash": "^4.17.11"
   },
   "devDependencies": {
     "chai": "^4.2.0",
-    "mocha": "5.2.0",
+    "mocha": "6.1.4",
     "mocha-jenkins-reporter": "0.4.1",
     "nock": "^10.0.6",
-    "nyc": "^13.1.0",
-    "rimraf": "^2.6.2",
+    "nyc": "^14.1.1",
+    "rimraf": "^2.6.3",
     "simple-mock": "^0.8.0",
-    "source-map-support": "^0.5.9",
-    "ts-node": "^8.0.2",
-    "tslint": "^5.11.0",
+    "source-map-support": "^0.5.12",
+    "ts-node": "^8.1.0",
+    "tslint": "^5.16.0",
     "tslint-no-unused-expression-chai": "^0.1.4",
-    "typescript": "^3.1.1",
-    "voxa": "3.1.0-alpha5"
+    "typescript": "^3.4.5",
+    "voxa": "3.1.0"
   },
   "peerDependencies": {
-    "voxa": "3.1.0-alpha5"
+    "voxa": "3.1.0"
   },
   "bugs": {
-    "url": "https://github.com/mediarain/voxa-dashbot/issues"
+    "url": "https://github.com/VoxaAI/voxa-dashbot/issues"
   },
-  "homepage": "https://github.com/mediarain/voxa-dashbot#readme"
+  "homepage": "https://github.com/VoxaAI/voxa-dashbot#readme"
 }
