--- a/package.json
+++ b/package.json
@@ -2,9 +2,9 @@
   "name": "voxa-dashbot",
   "version": "2.1.0-alpha1",
   "description": "Integrate Dashbot analytics into your Alexa apps using the voxa framework",
-  "main": "lib/Voxa-Dashbot.js",
+  "main": "lib/index.js",
   "scripts": {
-    "test": "nyc --reporter=html --reporter=text --report-dir=reports mocha  test/",
+    "test": "nyc --reporter=html --reporter=text --report-dir=reports mocha  test/ --config test/.mocharc.json",
     "lint": "tslint --config tslint.json --project tsconfig.json",
     "clean": "rimraf lib/",
     "prepare": "npm run clean && tsc"
@@ -32,31 +32,33 @@
   "dependencies": {
     "@types/lodash": "^4.14.129",
     "dashbot": "^11.1.0",
-    "lodash": "^4.17.11"
+    "lodash": "^4.17.11",
+    "request": "^2.88.0",
+    "request-promise": "^4.2.5"
   },
   "devDependencies": {
-    "@types/chai": "^4.2.6",
-    "@types/mocha": "^5.2.7",
+    "@types/chai": "^4.2.8",
+    "@types/mocha": "^7.0.1",
     "@types/simple-mock": "^0.8.1",
     "chai": "^4.2.0",
     "coveralls": "^3.0.9",
-    "husky": "^3.1.0",
-    "mocha": "^6.2.2",
+    "husky": "^4.2.1",
+    "mocha": "^7.0.1",
     "mocha-jenkins-reporter": "^0.4.2",
-    "nock": "^11.7.0",
-    "nyc": "^14.1.1",
+    "nock": "^11.7.2",
+    "nyc": "^15.0.0",
     "prettier": "^1.19.1",
     "pretty-quick": "^2.0.1",
-    "rimraf": "^3.0.0",
+    "rimraf": "^3.0.1",
     "simple-mock": "^0.8.0",
     "source-map-support": "^0.5.12",
-    "ts-node": "^8.1.0",
-    "tslint": "^5.16.0",
+    "ts-node": "^8.6.2",
+    "tslint": "^6.0.0",
     "tslint-config-prettier": "^1.18.0",
     "tslint-no-unused-expression-chai": "^0.1.4",
-    "tslint-plugin-prettier": "^2.0.1",
-    "typescript": "^3.4.5",
-    "voxa": "^3.3.0"
+    "tslint-plugin-prettier": "^2.1.0",
+    "typescript": "^3.7.5",
+    "voxa": "^3.3.1"
   },
   "peerDependencies": {
     "voxa": "^3.3.0"
@@ -75,5 +77,13 @@
       ".js",
       ".ts"
     ]
+  },
+  "mocha": {
+    "require": "ts-node/register",
+    "exclude": [
+      "reports/**"
+    ],
+    "extension": "ts,js",
+    "recursive": true
   }
 }
