--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "test": "nyc --reporter=html --reporter=text --report-dir=reports mocha  test/ --config test/.mocharc.json",
     "lint": "tslint --config tslint.json --project tsconfig.json",
     "clean": "rimraf lib/",
-    "prepare": "npm run clean && tsc"
+    "prepare": "npm run clean && tsc",
+    "lint:fix": "tslint --fix --config tslint.json --project tsconfig.json --exclude \"**/*.json\""
   },
   "repository": {
     "type": "git",
