--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "voxa-dashbot",
-  "version": "2.1.0-alpha3",
+  "version": "2.1.0",
   "description": "Integrate Dashbot analytics into your Alexa apps using the voxa framework",
   "main": "lib/index.js",
   "scripts": {
