--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "@types/chai": "^4.2.13",
     "@types/mocha": "^8.0.3",
     "@types/simple-mock": "^0.8.1",
+    "botbuilder": "^3.30.0",
     "chai": "^4.2.0",
     "coveralls": "^3.1.0",
     "husky": "^4.3.0",
